# estoque

./: .gitignore  .pdm-python  README.md  db.sqlite3  manage.py  pyproject.toml  requirements.txt
config/: settings.py  urls.py
estoque/: admin.py  models.py  serializers.py  views.py
estoque-main/: admin.py  apps.py
estoque-main/migrations/: 0001_initial.py  0002_produto.py  0006_historico.py  0007_administrador_delete_adiministrador_and_more.py
estoque-main/models/: administrador.py  produto.py  usuario.py
estoque-main/serializers/: administrador.py  categoria.py  historico.py
estoque-main/views/: administrador.py
estoque/migrations/: 0003_usuario.py  0004_remove_produto_site_produto_categoria_and_more.py  0005_adiministrador.py
estoque/models/: __init__.py  administrador.py  historico.py  produto.py  usuario.py
estoque/serializers/: produto.py  usuario.py
estoque/views/: __init__.py  categoria.py  historico.py  produto.py  usuario.py
estoque_main/: admin.py  apps.py
estoque_main/migrations/: 0001_initial.py  0002_initial.py  0002_retirada.py
estoque_main/models/: __init__.py  administrador.py  categoria.py  retirada.py  usuario.py
estoque_main/serializers/: __init__.py  administrador.py  categoria.py  historico.py  itemRetirada.py  produto.py  retirada.py  usuario.py
estoque_main/views/: __init__.py  administrador.py  (+5 more)
models/: __init__.py  categoria.py  historico.py
uploader/: router.py  views.py
usuario/: backends.py  models.py  serializers.py  urls.py
usuarios/: admin.py  apps.py  managers.py  router.py  serializers.py  views.py
(+4 files in other folders)
