
[project]
name = "estoque"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "matheus", email = "viliczinskimatheusjose@gmail.com"},
]
dependencies = ["django>=5.2.1"]
requires-python = "==3.13.*"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm]
distribution = false
